[package]
name = "rust-lib-template"
description = "Rust library template"
version = "0.1.0"
edition = "2021"

authors = ["Vahid V. <vhid.vz@gmail.com>"]

# https://crates.io/category_slugs
categories = ["rust","rust::library"]

keywords = ["rust", "library-template"]
homepage = "https://github.com/vhidvz/rust-lib-template"
repository = "https://github.com/vhidvz/rust-lib-template.git"

license = "MIT"
exclude = ["renovate.json", "docs/", "docs.sh", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
