[package]
name = "rust-lib-template"
description = "Rust library template"

edition = "2021"
version = "0.1.1"
rust-version = "1.68"

authors = ["Vahid V. <vhid.vz@gmail.com>"]

# https://crates.io/category_slugs
categories = ["rust","rust::library"]

keywords = ["rust", "library-template"]
documentation = "https://docs.rs/rust-lib-template"
homepage = "https://github.com/vhidvz/rust-lib-template"
repository = "https://github.com/vhidvz/rust-lib-template.git"

license = "MIT"
exclude = ["renovate.json", "docs/", "docs.sh", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
