[package]
name = "rust-lib-template"
description = "Rust library template"

edition = "2021"
version = "1.0.2"
rust-version = "1.68"

authors = ["Vahid V. <vhid.vz@gmail.com>"]

# https://crates.io/category_slugs
categories = ["rust","rust::library"]

keywords = ["rust", "library-template"]
documentation = "https://docs.rs/rust-lib-template"
homepage = "https://github.com/vhidvz/rust-lib-template"
repository = "https://github.com/vhidvz/rust-lib-template.git"

license = "MIT"
exclude = ["renovate.json", "docs/", "docs.sh", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
